update example dataset

--- a/04_RAG_Evaluation/04_03_Faithfulness.ipynb
+++ b/04_RAG_Evaluation/04_03_Faithfulness.ipynb
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "from datasets import load_dataset \n",
-    "dataset = load_dataset(\"harpreetsahota/ragas-example-dataset\", split='train')"
+    "dataset = load_dataset(\"explodinggradients/fiqa\", split='baseline', trust_remote_code=True)"
    ]
   },
   {
