--- a/04_RAG_Evaluation/04_03_Faithfulness.ipynb
+++ b/04_RAG_Evaluation/04_03_Faithfulness.ipynb
@@ -81,7 +81,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I've got an [example dataset](https://huggingface.co/datasets/harpreetsahota/ragas-example-dataset) we'll use in the next several videos in my Hugging Face repo. You don't need to sign-up for a Hugging Face account to download the repo, but if you do end up creating an acocunt [feel free to follow me](https://huggingface.co/harpreetsahota)!"
+    "I've got an [example dataset](https://huggingface.co/datasets/explodinggradients/fiqa/viewer/ragas_eval?row=1) we'll use in the next several videos in my Hugging Face repo. \n",
+    "\n",
+    "You don't need to sign-up for a Hugging Face account to download the repo, but if you do end up creating an acocunt [feel free to follow me](https://huggingface.co/harpreetsahota)!"
    ]
   },
   {
