--- a/04_RAG_Evaluation/04_03_Faithfulness.ipynb
+++ b/04_RAG_Evaluation/04_03_Faithfulness.ipynb
@@ -189,11 +189,13 @@
     "\n",
     "   - After statements are generated, the next step is to evaluate **faithfulness** —that is, whether the statements are accurate and truthful representations of the original context or answer.\n",
     "\n",
-    "   - For this, the system employs the `NLI_STATEMENTS_MESSAGE` prompt. This prompt directs the LLM to assess each generated statement's faithfulness based on the original context (from which the question-answer pair was derived) or additional context provided separately. It asks the LLM to return a verdict on each statement, indicating whether the statement can be verified against the context.\n",
+    "   - For this, the system employs the `NLI_STATEMENTS_MESSAGE` prompt. \n",
+    "   \n",
+    "   - This prompt directs the LLM to assess each generated statement's faithfulness based on the original context (from which the question-answer pair was derived) or additional context provided separately. \n",
+    "   \n",
+    "   - It asks the LLM to return a verdict on each statement, indicating whether the statement can be verified against the context.\n",
     "\n",
-    "   - The instruction to the LLM includes a detailed explanation of how to judge each statement's faithfulness, supported by examples for clarity.\n",
-    "\n",
-    "   - The responses from the LLM, based on this prompt, are then parsed with the `_faithfulness_output_parser`, aligning with the `StatementFaithfulnessAnswers` model. This parsing extracts structured data that includes the verdict and reasoning for each statement's faithfulness evaluation."
+    "   - The instruction to the LLM includes a detailed explanation of how to judge each statement's faithfulness, supported by examples for clarity."
    ]
   },
   {
@@ -281,6 +283,25 @@
    "outputs": [],
    "source": [
     "score()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Recap\n",
+    "\n",
+    "**Input**: An answer to a question and the context related to that answer.\n",
+    "\n",
+    "**Process:**\n",
+    "\n",
+    "  - **Step 1:** Use LLM to transform the answer into a set of discrete statements.\n",
+    "\n",
+    "  - **Step 2:** Evaluate each statement's faithfulness using another LLM prompt, based on the original answer's context.\n",
+    "\n",
+    "  - **Step 3:** Calculate a score representing the percentage of statements deemed faithful.\n",
+    "\n",
+    "**Output:** A faithfulness score, where a score closer to 1 indicates higher faithfulness, showing that the generated statements are accurate and truthful representations of the original context or answer."
    ]
   }
  ],
