rename column from ground_truths to ground_truth

--- a/04_RAG_Evaluation/04_03_Faithfulness.ipynb
+++ b/04_RAG_Evaluation/04_03_Faithfulness.ipynb
@@ -93,7 +93,10 @@
    "outputs": [],
    "source": [
     "from datasets import load_dataset \n",
-    "dataset = load_dataset(\"explodinggradients/fiqa\", split='baseline', trust_remote_code=True)"
+    "\n",
+    "dataset = load_dataset(\"explodinggradients/fiqa\", split='baseline', trust_remote_code=True)\n",
+    "\n",
+    "dataset.rename_column(\"ground_truths\", \"ground_truth\")"
    ]
   },
   {
