--- a/04_RAG_Evaluation/04_04_Answer_Relevancy.ipynb
+++ b/04_RAG_Evaluation/04_04_Answer_Relevancy.ipynb
@@ -90,7 +90,7 @@
    "source": [
     "# 🔍 **Answer Relevancy**\n",
     "\n",
-    "- 🎯 Answer Relevancy measures how directly an answer addresses the question asked.\n",
+    "- 🎯 [Answer Relevancy](https://github.com/explodinggradients/ragas/blob/main/src/ragas/metrics/_answer_relevance.py) measures how directly an answer addresses the question asked.\n",
     "\n",
     "- 🔍 The process involves generating hypothetical questions from the answer and comparing these to the original question to assess similarity.\n",
     "\n",
