--- a/04_RAG_Evaluation/04_04_Answer_Relevancy.ipynb
+++ b/04_RAG_Evaluation/04_04_Answer_Relevancy.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "dataset = load_dataset(\"explodinggradients/fiqa\", split='baseline', trust_remote_code=True)\n",
     "\n",
-    "dataset.rename_column(\"ground_truths\", \"ground_truth\")"
+    "dataset = dataset.rename_column(\"ground_truths\", \"ground_truth\")"
    ]
   },
   {
