link to source code

--- a/04_RAG_Evaluation/04_07_Context_Recall.ipynb
+++ b/04_RAG_Evaluation/04_07_Context_Recall.ipynb
@@ -106,7 +106,7 @@
    "source": [
     "# 📊 Context Recall\n",
     "\n",
-    "Context recall is a metric for evaluating information retrieval systems. \n",
+    "[Context recall](https://github.com/explodinggradients/ragas/blob/main/src/ragas/metrics/_context_recall.py) is a metric for evaluating information retrieval systems. \n",
     "\n",
     "It assesses the effectiveness of a retriever in gathering all relevant context for accurately answering a question. By comparing each part of a provided ground truth answer to the retrieved information, context recall assesses the completeness of the retrieval process. \n",
     "\n",
