updating words for response mode

--- a/03_Introduction_to_RAG/03_04_Prompt_Engineering_for_RAG.ipynb
+++ b/03_Introduction_to_RAG/03_04_Prompt_Engineering_for_RAG.ipynb
@@ -170,7 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = query_pipeline.run(\"I want to turn a new chapter in my life.\")"
+    "response = query_pipeline.run(\"What do the poems teach about one should think about success and failure?\")"
    ]
   },
   {
@@ -197,7 +197,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from llama_index.core.response_synthesizers import ResponseMode"
    ]
   },
@@ -214,37 +213,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Response modes\n",
+    "\n",
+    "In LlamaIndex, [response modes](https://docs.llamaindex.ai/en/stable/module_guides/deploying/query_engine/response_modes/) are used to determine how the system should process and return the results of a query.  Each response mode is designed to handle different types of queries and use cases, providing flexibility and customization in how you interact with your data.\n",
+    "\n",
     "#### ⚗️ Refine \n",
     "\n",
     "Refine is an iterative method to generate a response. \n",
     "\n",
     "Initially, we use the context in the first node and the query to create a basic answer. Then, we refine this answer by inputting it, along with the query and context of the second node, into a \"refine prompt\" to generate an improved answer. \n",
     "\n",
-    "This refinement process continues through N-1 nodes, with N being the total number of nodes.\n",
+    "This refinement process continues through N-1 nodes, with N being the total number of nodes. It makes a separate LLM call per Node/retrieved chunk. This mode is good for generating more detailed answers.\n",
     "\n",
     "#### 🤏 Compact\n",
     "\n",
-    "Compact and refine mode first combine text chunks into larger consolidated chunks that more fully utilize the available context window, then refine answers across them. This mode is faster than refine since we make fewer calls to the LLM.\n",
+    "Compact and refine mode first combine text chunks into larger consolidated chunks that more fully utilize the available context window, then refine answers across them. This mode is faster than refine since we make fewer calls to the LLM. \n",
+    "\n",
+    "This mode is useful when you want to reduce the number of LLM calls while still refining the answer.\n",
     "\n",
     "\n",
     "#### 📝 Simple summarize\n",
     "\n",
     "Merge all text chunks into one and make a large language model call. The call will fail if the merged text chunk exceeds the context window size.\n",
     "\n",
+    "It's good for quick summarization purposes, but may lose detail due to truncation.\n",
+    "\n",
     "#### 🌴 Tree summarize\n",
     "\n",
-    "Construct a tree index for the candidate nodes in a bottom-up manner then use a summary prompt based on the query. Return the root node as the final response.\n",
+    "Construct a tree index for the candidate nodes in a bottom-up manner then use a summary prompt based on the query. Return the root node as the final response. When this mode is set, the system is instructed to iterate through many, if not all, documents in order to synthesize an answer, which can lead to better summarization results. \n",
+    "\n",
+    "This mode is particularly useful for summarization queries, where the goal is to provide a comprehensive summary of a collection of text or a specific topic.\n",
     "\n",
     "#### 🤖 Generation\n",
     "\n",
     "Ignore context, just use LLM to generate a response.\n",
     "\n",
     "#### ❌ No text\n",
-    "Return the retrieved context nodes, without synthesizing a final response.\n",
+    "\n",
+    "This mode only runs the retriever to fetch the nodes that would have been sent to the LLM, without actually synthesizing a final response. The nodes can then be inspected by checking `response.source_nodes`.\n",
     "\n",
     "#### 📏 Accumulate\n",
     "\n",
-    "Synthesize a response for each text chunk, and then return the concatenation.\n",
+    "This mode applies the query to each text chunk while accumulating the responses into an array. It returns a concatenated string of all responses. \n",
+    "\n",
+    "This mode is good for when you need to run the same query separately against each text chunk.\n",
     "\n",
     "#### Compact accumulate\n",
     "\n",
@@ -270,7 +282,7 @@
     "\n",
     "query_pipeline = create_query_pipeline(chain)\n",
     "\n",
-    "query_pipeline.run(\"I want to turn a new chapter in my life.\")"
+    "query_pipeline.run(\"What do the poems teach about one should think about success and failure?\")"
    ]
   }
  ],
