--- a/03_Introduction_to_RAG/03_05_Data_Preparation_for_RAG.ipynb
+++ b/03_Introduction_to_RAG/03_05_Data_Preparation_for_RAG.ipynb
@@ -66,7 +66,7 @@
     "import os\n",
     "import getpass\n",
     "import nest_asyncio\n",
-    "\n",
+    "import fitz\n",
     "from dotenv import load_dotenv \n",
     "\n",
     "nest_asyncio.apply()\n",
@@ -173,15 +173,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import fitz\n",
-    "\n",
-    "# document = fitz.open(PDF_PATH)\n",
-    "document = fitz.open(\"../data/almanack_of_naval_ravikant.pdf\")\n",
+    "document = fitz.open(PDF_PATH)\n",
     "\n",
     "def extract_text(document, opt=\"text\"):\n",
     "    '''Extract text from a page and returns a list of strings'''\n",
     "    text = document.get_text(opt, sort=True) \n",
-    "\n",
     "    text = text.split(\"\\n\")\n",
     "    return text\n",
     "\n",
@@ -221,6 +217,7 @@
     "    if pages is not None:\n",
     "        document.select(pages)  # Select specific pages if pages are provided\n",
     "    return document\n",
+    "\n",
     "\n",
     "def handle_chapter_headers_footers(strings, flag):\n",
     "    \"\"\"\n",
@@ -298,7 +295,8 @@
     "        bullets=True,\n",
     "        ascii=True,\n",
     "        lowercase=False,\n",
-    "        citations=True\n",
+    "        citations=True,\n",
+    "        merge_split_words=True,\n",
     "    )\n",
     "\n",
     "    return {\n",
@@ -311,20 +309,11 @@
     "        }\n",
     "    }\n",
     "\n",
-    "def extract_texts_from_pdf(file_path, title, author, flag, pages=None):\n",
-    "    \"\"\"\n",
-    "    Extracts texts from specific pages or the entire PDF document and returns a list of dictionaries \n",
-    "    containing the extracted texts and associated metadata for each page.\n",
-    "\n",
-    "    This function first retrieves a document object for the given PDF file, optionally focusing on\n",
-    "    specified pages. It then iterates over each page in the document, extracting text and metadata\n",
-    "    using the `extract_text` function. Each page's text is processed according to the specified flag\n",
-    "    that influences text cleaning and header/footer handling.\n",
-    "    \"\"\"\n",
+    "def extract_texts_from_pdf(file_path, title, author, pages, flag):\n",
     "    document = get_document(file_path, pages)\n",
     "    file_name = os.path.basename(file_path)\n",
     "    extracted_texts = [extract_text(page, file_path, title, author, flag) for page in document]\n",
-    "    return extracted_texts"
+    "    return extracted_texts\n"
    ]
   },
   {
@@ -391,7 +380,7 @@
     "    print(f\"Extracting texts from {pdf['title']} by {pdf['author']}...\")\n",
     "    texts = extract_texts_from_pdf(pdf[\"file_path\"], pdf[\"title\"], pdf[\"author\"], pdf[\"pages\"], pdf[\"flag\"])\n",
     "    print(f\"Finished extracting texts from {pdf['title']}.\")\n",
-    "    all_texts.append(texts)"
+    "    all_texts.extend(texts)"
    ]
   },
   {
@@ -409,7 +398,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(all_texts[0])"
+    "all_texts[42]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create and persist a Document store"
    ]
   },
   {
@@ -418,15 +414,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_texts[0][42]"
+    "from llama_index.core import Document\n",
+    "\n",
+    "llama_index_docs = [Document(text=doc[\"text\"], metadata=doc[\"metadata\"]) for doc in all_texts]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -434,129 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_document(file_path, pages):\n",
-    "    \"\"\"\n",
-    "    Opens a PDF file and optionally selects specific pages to create a document object.\n",
-    "\n",
-    "    This function utilizes the `fitz` library to open a PDF file located at `file_path`. \n",
-    "    If a list of `pages` is provided, the function selects only these pages from the document.\n",
-    "    This is useful for focusing on certain parts of a PDF without loading the entire document into memory.\n",
-    "\n",
-    "    Parameters:\n",
-    "        file_path (str): The path to the PDF file to be opened.\n",
-    "        pages (list of int, optional): A list of page numbers to select from the PDF. \n",
-    "            If `None`, the entire document is loaded.\n",
-    "\n",
-    "    \"\"\"\n",
-    "    document = fitz.open(file_path)\n",
-    "    if pages is not None:\n",
-    "        document.select(pages)  # Select specific pages if pages are provided\n",
-    "    return document\n",
-    "\n",
-    "\n",
-    "def handle_chapter_headers_footers(strings, flag):\n",
-    "    \"\"\"\n",
-    "    Modify a list of strings based on a specified flag and join them into a single string.\n",
-    "\n",
-    "    This function first removes any empty strings from the input list. It then checks if the\n",
-    "    remaining list has more than three elements. If so, it modifies the list by removing the\n",
-    "    first element, last element, or both, based on the value of the flag. The final list is then\n",
-    "    joined into a single string with spaces separating the elements.\n",
-    "\n",
-    "    Parameters:\n",
-    "        strings (list of str): The list of strings to modify.\n",
-    "        flag (str): A flag indicating the modification to perform on the list:\n",
-    "            - 'remove_first': Remove the first element of the list.\n",
-    "            - 'remove_last': Remove the last element of the list.\n",
-    "            - 'remove_first_last': Remove both the first and last elements of the list.\n",
-    "            - 'remove_first_two': Remove the first two elements of the list.\n",
-    "            - Any other value leaves the list unchanged.\n",
-    "\n",
-    "    Returns:\n",
-    "        str: A single string composed of the modified list elements, separated by spaces.\n",
-    "    \"\"\"\n",
-    "    # Filter out empty strings\n",
-    "    filtered_strings = [s for s in strings if s]\n",
-    "    \n",
-    "    # Check if the filtered list has more than three elements\n",
-    "    if len(filtered_strings) > 3:\n",
-    "        if flag == 'remove_first':\n",
-    "            filtered_strings = filtered_strings[1:]  # Slice off the first element\n",
-    "        elif flag == 'remove_last':\n",
-    "            filtered_strings = filtered_strings[:-1]  # Slice off the last element\n",
-    "        elif flag == 'remove_first_last':\n",
-    "            filtered_strings = filtered_strings[1:-1]  # Slice off the first and last elements\n",
-    "        elif flag == 'remove_first_two':\n",
-    "            filtered_strings = filtered_strings[2:]  # Slice off the first two elements\n",
-    "    \n",
-    "    # Join all strings with a space and return the result\n",
-    "    return ' '.join(filtered_strings).strip()\n",
-    "\n",
-    "def extract_text(page, file_name, title, author, flag, opt=\"text\"):\n",
-    "    \"\"\"\n",
-    "    Extracts text from a specified page of a document and returns a dictionary containing\n",
-    "    the extracted text and associated metadata.\n",
-    "\n",
-    "    The function first retrieves text from the given `page` object using the specified `opt` method.\n",
-    "    It then processes this text to remove chapter headers, footers, and applies various cleaning\n",
-    "    procedures according to the `flag` and other parameters set in the `clean` function.\n",
-    "\n",
-    "    Parameters:\n",
-    "        page (fitz.Page): The page object from which to extract text.\n",
-    "        file_name (str): The name of the file from which the page is taken.\n",
-    "        title (str): The title of the document.\n",
-    "        author (str): The author of the document.\n",
-    "        flag (str): A flag used to customize how chapter headers and footers are handled.\n",
-    "        opt (str, optional): The method of text extraction to be used by `get_text`.\n",
-    "            Defaults to \"text\", but can be changed to other methods supported by the library.\n",
-    "\n",
-    "    Returns:\n",
-    "        dict: A dictionary with two keys:\n",
-    "            - 'text': A string containing the cleaned and processed text from the page.\n",
-    "            - 'metadata': A dictionary containing metadata about the text, including the\n",
-    "                          page number, file name, title, and author.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    text = page.get_text(opt, sort=True)\n",
-    "\n",
-    "    text = text.split(\"\\n\")\n",
-    "\n",
-    "    text = handle_chapter_headers_footers(text, flag)\n",
-    "\n",
-    "    text = clean(\n",
-    "        text,\n",
-    "        extra_whitespace=True,\n",
-    "        broken_paragraphs=True,\n",
-    "        bullets=True,\n",
-    "        ascii=True,\n",
-    "        lowercase=False,\n",
-    "        citations=True\n",
-    "    )\n",
-    "\n",
-    "    return {\n",
-    "        \"text\": text,\n",
-    "        \"metadata\": {\n",
-    "            \"page_number\": page.number,\n",
-    "            \"file_name\": file_name,\n",
-    "            \"title\": title,\n",
-    "            \"author\": author\n",
-    "        }\n",
-    "    }\n",
-    "\n",
-    "def extract_texts_from_pdf(file_path, title, author, flag, pages=None):\n",
-    "    \"\"\"\n",
-    "    Extracts texts from specific pages or the entire PDF document and returns a list of dictionaries \n",
-    "    containing the extracted texts and associated metadata for each page.\n",
-    "\n",
-    "    This function first retrieves a document object for the given PDF file, optionally focusing on\n",
-    "    specified pages. It then iterates over each page in the document, extracting text and metadata\n",
-    "    using the `extract_text` function. Each page's text is processed according to the specified flag\n",
-    "    that influences text cleaning and header/footer handling.\n",
-    "    \"\"\"\n",
-    "    document = get_document(file_path, pages)\n",
-    "    file_name = os.path.basename(file_path)\n",
-    "    extracted_texts = [extract_text(page, file_path, title, author, flag) for page in document]\n",
-    "    return extracted_texts"
+    "len(llama_index_docs)"
    ]
   },
   {
@@ -564,7 +433,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "llama_index_docs[0].__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from llama_index.core.storage.docstore import SimpleDocumentStore\n",
+    "from llama_index.core.storage import StorageContext\n",
+    "\n",
+    "# Create a SimpleDocumentStore and add the documents\n",
+    "docstore = SimpleDocumentStore()\n",
+    "docstore.add_documents(llama_index_docs)\n",
+    "\n",
+    "# Create a storage context\n",
+    "storage_context = StorageContext.from_defaults(docstore=docstore)\n",
+    "\n",
+    "# Persist the document store to disk\n",
+    "storage_context.persist(\"../data/words-of-the-senpais\")"
+   ]
   },
   {
    "cell_type": "markdown",
