added more options for parsing pdfs

--- a/03_Introduction_to_RAG/03_05_Data_Preparation_for_RAG.ipynb
+++ b/03_Introduction_to_RAG/03_05_Data_Preparation_for_RAG.ipynb
@@ -472,6 +472,7 @@
     "4. 💾 **Metadata and noise**: Documents may include metadata, headers, footers, and other noise that needs to be handled before processing.\n",
     "\n",
     "While this course won't cover these complex scenarios in depth, it's essential to understand the potential challenges and the need for more advanced data preparation and cleaning techniques when working with diverse document types.\n",
+    "\n",
     "## Options for parsing complex pdfs\n",
     "\n",
     "### General PDFs\n",
@@ -495,6 +496,10 @@
     "- [Table Transformer](https://github.com/microsoft/table-transformer) - A deep learning model for extracting tables from unstructured documents (PDFs and images)\n",
     "\n",
     "- [Layout Parser](https://github.com/Layout-Parser/layout-parser) - This is a unified toolkit for deep learning based document image analysis which has a rich repository of deep learning models for layout detection, as well as a set of unified APIs for using them.\n",
+    "\n",
+    " - [marker](https://github.com/VikParuchuri/marker) - Converts PDF to markdown quickly with high accuracy.\n",
+    "\n",
+    " - [surya](https://github.com/VikParuchuri/surya) -  A document OCR toolkit for accurate OCR in 90+ languages, line-level text detection in any language, layout analysis (table, image, header, etc detection) in any language.\n",
     "\n",
     "### Academic PDFs\n",
     "\n",
